argocd/external-services/airdcpp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-svc-airdcpp
spec:
  type: ExternalName
  externalName: truenas.bowmans.site
  ports:
    - port: 10155
