argocd/external-services/airdcpp/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ext-ingress-route-airdcpp
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`airdcpp.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-airdcpp
        port: 10155
      middlewares:
        - name: kube-system-private-ips-allow@kubernetescrd
  tls:
    secretName: ext-cert-airdcpp
